CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Register__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Holds the customer related to this register</description>
    <inlineHelpText>Holds the customer related to this register</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Registers</relationshipLabel>
    <relationshipName>Registers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>