CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Register__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Contains the register Id and will be used to be compare with the process which provide the data so the record can be tracked in the future</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains the register Id and will be used to be compare with the process which provide the data so the record can be tracked in the future</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>