CODING_CHALLENGE/MeterReader/force-app/main/default/objects/Register__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Holds the amount consumed for the customer</description>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>